--- a/JenkinsFile
+++ b/JenkinsFile
@@ -19,7 +19,7 @@ pipeline{
                     try {
                         sh 'docker rm -f $(docker ps -a)'
 
-                    } catch (exception e ) {
+                    } catch (Exception e ) {
                         echo "No Running Docker Container"
                     } 
 
@@ -45,7 +45,7 @@ pipeline{
         }
     }
     post{
-        always{
+        always{ 
             sh 'docker-compose down --remove-orphans -v'
             sh 'docker-compose ps'
             
