--- a/JenkinsFile
+++ b/JenkinsFile
@@ -27,8 +27,7 @@ pipeline{
         }
         stage(" Start Docker Container ") {
             steps {
-                sh 'make up'
-                sh 'docker compose ps'
+                sh 'docker-compose ps'
             }
         }
         stage(" Run Composer Install "){
